tests/sema/negative/unknown_struct_field.nv
struct Point {
    x: int;
}

fn main() : void {
    let p : Point = Point { x: 1, y: 2 };
    return;
}
